Refactor API service and controllers
